- fixed `CACHE.read()`
- added a new argument `size {Number}` to the `WebSocket.on('message', function(client, msg, [size]))` event
- fixed `@{href()}` command in the ViewEngine
- improved config & resource parser by adding support for `=` between key and value and for `#` as a comment
- removed `@{url()}` method and added `@{url}` property
- added `@{hostname([url])}`

========================
0.0.5
========================

- added support for multiple events `ON('event1 + event2 + event3', function() {})`
- fixed parsing nested schema in inline JSON schemas
- added support for `|` characters in the routes API endpoints

========================
0.0.4
========================

- improved `Number.pluralize()` method
- added `PROMISIFY(fn, [a], [b])` method
- added `$.promisify(fn, [a], [b])` method
- added `FILESTORAGE().copy(id, path, [callback(err, meta)])`
- fixed formatting `0` number in the `Tangular.format` helper
- improved `$.invalid()` method, now it returns `ErrorBuilder`
- improved `$.callback()`, it accepts another instance of `$`
- improved `DATA.query()` method
- fixed removing existing CRONs by [Marek Mraz](https://github.com/Mrazbb)

========================
0.0.3
========================

- extended icon validator by adding support for `tic` keyword
- added new events `ON('request')`, `ON('controller')` and `ON('websocket')`
- fixed applying the `$insecure` option in the FlowStream
- fixed routing for unexpected content-type
- added `controller.authorize([callback])` method
- improved `translate` command in `total5` command-line tool
- fixed link generator for email and phone numbers in `Markdown`
- fixed auto-restarting app in the `debug` mode with bundles
- fixed global settings for JS/CSS/HTML minificator
- improved merging files
- fixed middleware with `_` underscore character in routes
- fixed `CORS()` method
- improved `CORS` checker
- added support for inheriting inline schemas in the form e.g. `id:String,@address,@products`